--- a/BoutiqueCsharp/Views/Shared/_Layout.cshtml
+++ b/BoutiqueCsharp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-controller="Pie" asp-action="List">Pies</a></li>
+                    @await Component.InvokeAsync("CategoryMenu")
+                    @await Component.InvokeAsync("ShoppingCartSummary")
                 </ul>
             </div>
         </div>
