--- a/BoutiqueCsharp/Views/Shared/_Layout.cshtml
+++ b/BoutiqueCsharp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li><a asp-controller="Pie" asp-action="List">Pies</a></li>
                     @await Component.InvokeAsync("CategoryMenu")
                     @await Component.InvokeAsync("ShoppingCartSummary")
+                    <li><a asp-controller="Contact" asp-action="Index">Contact us</a></li>
                 </ul>
             </div>
         </div>
