--- a/BoutiqueCsharp/Views/_ViewImports.cshtml
+++ b/BoutiqueCsharp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BoutiqueCsharp.ViewModels
 @using BoutiqueCsharp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper BoutiqueCsharp.TagHelpers.*, BoutiqueCsharp
