--- a/BoutiqueCsharp/Views/Home/Index.cshtml
+++ b/BoutiqueCsharp/Views/Home/Index.cshtml
@@ -1,13 +1,16 @@
-﻿@Model HomeViewModel 
+﻿@model HomeViewModel
 
-<partial name="_Carousel"/>
+
+<partial name="_Carousel" />
 
 <h2>Pies of the week</h2>
 <h4>Our weekly selection - just for you!</h4>
 
 <div class="row">
+
     @foreach (var pie in Model.PiesOfTheWeek)
-            {
-                <partial name="_PieCard" model="pie" />
-            }
+    {
+        <partial name="_PieCard" model="pie" />
+    }
+
 </div>
