--- a/BoutiqueCsharp/Views/ShoppingCart/Index.cshtml
+++ b/BoutiqueCsharp/Views/ShoppingCart/Index.cshtml
@@ -34,3 +34,7 @@
         </tr>
     </tfoot>
 </table>
+
+<div class="text-center">
+    <a class="btn btn-primary" asp-controller="Order" asp-action="Checkout"> Check out now!</a>
+</div>
